<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting_title">
    <ListPreference
        android:title="@string/settings_order_by_label"
        android:key="@string/settings_order_by_key"
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/setting_order_by_lebels"
        android:entryValues="@array/setting_order_by_values"
        ></ListPreference>
    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label"/>

</PreferenceScreen>